Layout issue

--- a/default.css
+++ b/default.css
@@ -103,7 +103,7 @@ ul>li:hover{
   .nav-links li {
     display: inline-block;
     list-style: outside none none;
-    margin: 0 1.5em;
+    margin: 0 0.5em;
     overflow: hidden;
   }
   .nav-links a {
